# gnss-manipulation-kit

./: .gitignore  CMakeLists.txt  PKGBUILD
Common/: CMakeLists.txt
Common/Common/: Connection.h  ConnectionPool.h  DataBatchInserter.h  DatabaseHelper.h  Exception.h  Logger.h  SpinLock.h
Common/src/: Connection.cpp  ConnectionPool.cpp  DataBatchInserter.cpp  DatabaseHelper.cpp  Logger.cpp
DatabaseToJps/: CMakeLists.txt  DatabaseToJps.vcxproj  Makefile  linux.patch  main.cpp
DatabaseToJps/src/: main.cpp
Generator/Generator.Core/: CppCodeGenerator.cs
Generator/Output/: baseline.sql  meta-info.xml
Greis/: CMakeLists.txt
Greis.Tests/: CMakeLists.txt  config.test.ini
Greis.Tests/include/: tests.h
Greis.Tests/include/Tests/: FullStackTests.h  MySqlSinkTests.h  MySqlSourceTests.h  RinexTests.h
Greis.Tests/include/Utils/: BaseTest.h
Greis.Tests/src/: test.cpp
Greis.Tests/src/Utils/: BaseTest.cpp  Helpers.cpp
Greis/Greis/: DataChunk.h  MySqlSink.h  RinexReader.h  SerialPortBinaryStream.h
Greis/Greis/StdMessage/: AngularVelocityStdMessage.h  AntNameStdMessage.h  BaseInfoStdMessage.h  BaselineStdMessage.h  BaselinesStdMessage.h  BeiDouAlmStdMessage.h  BeiDouEphemerisStdMessage.h  BeiDouIonoParamsStdMessage.h  BeiDouUtcParamStdMessage.h  CNR4StdMessage.h  CNRStdMessage.h  CPStdMessage.h  CalBandsDelayStdMessage.h  ClockOffsetsStdMessage.h  CompRawNavDataStdMessage.h  DPStdMessage.h  DopsStdMessage.h  ERStdMessage.h  EpochEndStdMessage.h  EpochTimeStdMessage.h  EventStdMessage.h  ExtEventStdMessage.h  FileIdStdMessage.h  FlagsStdMessage.h  FullRotationMatrixStdMessage.h  GALAlmStdMessage.h  GALEphemerisStdMessage.h  GLOAlmanacStdMessage.h  GLOEphemerisStdMessage.h  GLOTimeStdMessage.h  GPSAlm0StdMessage.h  GPSEphemeris0StdMessage.h  GPSTimeStdMessage.h  GalRawNavDataStdMessage.h  GalUtcGpsParamStdMessage.h  GeoPosStdMessage.h  GeoVelStdMessage.h  GloDelaysStdMessage.h  GloNavDataStdMessage.h  GloRawNavDataStdMessage.h  (+78 more)
Greis/src/: DataChunk.cpp  MySqlSink.cpp  MySqlSinkGeneratedMembers.cpp  RinexReader.cpp
Greis/src/StdMessage/: AngularVelocityStdMessage.cpp  AntNameStdMessage.cpp  BaseInfoStdMessage.cpp  BaselineStdMessage.cpp  BaselinesStdMessage.cpp  BeiDouAlmStdMessage.cpp  BeiDouEphemerisStdMessage.cpp  BeiDouIonoParamsStdMessage.cpp  BeiDouUtcParamStdMessage.cpp  CNR4StdMessage.cpp  CNRStdMessage.cpp  CPStdMessage.cpp  CalBandsDelayStdMessage.cpp  ClockOffsetsStdMessage.cpp  CompRawNavDataStdMessage.cpp  DPStdMessage.cpp  DopsStdMessage.cpp  ERStdMessage.cpp  EpochEndStdMessage.cpp  EpochTimeStdMessage.cpp  EventStdMessage.cpp  ExtEventStdMessage.cpp  FileIdStdMessage.cpp  FlagsStdMessage.cpp  FullRotationMatrixStdMessage.cpp  GALAlmStdMessage.cpp  GALEphemerisStdMessage.cpp  GLOAlmanacStdMessage.cpp  GLOEphemerisStdMessage.cpp  GLOTimeStdMessage.cpp  GPSAlm0StdMessage.cpp  GPSEphemeris0StdMessage.cpp  GPSTimeStdMessage.cpp  GalRawNavDataStdMessage.cpp  GalUtcGpsParamStdMessage.cpp  GeoPosStdMessage.cpp  GeoVelStdMessage.cpp  GloDelaysStdMessage.cpp  GloNavDataStdMessage.cpp  GloRawNavDataStdMessage.cpp  (+78 more)
JpsToDatabase/: CMakeLists.txt  JpsToDatabase.vcxproj  main.cpp
JpsToDatabase/src/: main.cpp
NodeJsExtension/: binding.gyp
NodeJsExtension/src/: module.cpp
Platform/: CMakeLists.txt  Platform.sln  platform.sql
Platform.Tests/: CMakeLists.txt
Platform.Tests/include/: tests.h
Platform.Tests/include/Tests/: MissingDataTests.h  RtklibTests.h  StatisticsTests.h
Platform.Tests/include/Utils/: BaseTest.h  Helpers.h
Platform.Tests/src/: main.cpp
Platform.Tests/src/Utils/: BaseTest.cpp  (+1 more)
Platform/Platform/: ChainedSink.h  EControlCommand.h  EServiceLogSeverity.h  SerialStreamReader.h  ServiceManager.h
Platform/src/: ChainedSink.cpp  ServiceManager.cpp
TestData/: ifz-data-0.14G  ifz-data-0.14o  ifz-data-0.in.14N  ifz-data-0.in.14o  ifz-data-0.jps.obs  ifz-data-0.out.14N  ifz-data-0.out.14o  javad_20110115-cut.jps  javad_20110115-cut.jps.bak
db2rinex/: CMakeLists.txt
db2rinex/src/: main.cpp
jpslogd/: CMakeLists.txt  ChainedSink.h  Makefile  ServiceManager.h  config.ini  databaseupdate.sql  jpslogd.vcxproj  main.cpp  serialPortData.jps
jpslogd/include/: ChainedSink.h  EControlCommand.h  SerialStreamReader.h  ServiceManager.h
jpslogd/src/: main.cpp
rinex2db/: CMakeLists.txt
rinex2db/src/: main.cpp
rtklib/: CMakeLists.txt
rtklib/src/: convrnx.c  options.c  rcvraw.c  rtklib.h  rtksvr.c  solution.c  testrtklib.c  testrtklib.h
rtklib/src/rcv/: javad.c  novatel.c
tmp/: baselineModel.mwb  meta-info.xml
tmp/ProjectBase.Tests/: ProjectBase.Tests.vcxproj
tmp/jpslogd/: Makefile  databaseupdate.sql  jpslogd.vcxproj.filters
(+4 files in other folders)
